--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "@supabase/supabase-js": "^2.0.0-rc.10",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
